--- a/package.json
+++ b/package.json
@@ -24,5 +24,5 @@
 		"type": "MIT",
 		"url": "http://www.opensource.org/licenses/mit-license.html"
 	}],
-	"main": "buffered-writer"
+	"main": "lib/buffered-writer"
 }
